--- a/Authentication.html
+++ b/Authentication.html
@@ -25,12 +25,13 @@
 <body class="min-h-screen flex items-center justify-center text-white">
     <nav class="bg-gray-900 p-4 w-full fixed top-0 left-0 z-10">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-blue-400"><i class="fas fa-shield-alt mr-2"></i>PhishGuard Pro</a>
+            <a href="index.html" class="text-2xl font-bold text-blue-400"><i class="fas fa-shield-alt mr-2"></i>PhishGuard Pro</a>
             <ul class="flex space-x-6">
-                <li><a href="#home" class="hover:text-blue-400 transition">Home</a></li>
+                <li><a href="index.html" class="hover:text-blue-400 transition">Home</a></li>
                 <li><a href="simulations.html" class="hover:text-blue-400 transition">Simulations</a></li>
-                <li><a href="#history" class="hover:text-blue-400 transition">History</a></li>
-                <li><a href="#analytics" class="hover:text-blue-400 transition">Analytics</a></li>
+                <li><a href="index.html#history" class="hover:text-blue-400 transition">History</a></li>
+                <li><a href="analytics.html" class="hover:text-blue-400 transition">Analytics</a></li>
+                <li><a href="trainings.html" class="hover:text-blue-400 transition">Trainings</a></li>
                 <li><a href="#profile" class="hover:text-blue-400 transition">Profile</a></li>
             </ul>
         </div>
