--- a/Authentication.html
+++ b/Authentication.html
@@ -22,8 +22,8 @@
         }
     </style>
 </head>
-<body class="min-h-screen flex items-center justify-center text-white">
-    <nav class="bg-gray-900 p-4 w-full fixed top-0 left-0 z-10">
+<body class="min-h-screen text-white">
+    <nav class="bg-gray-900 p-4">
         <div class="container mx-auto flex justify-between items-center">
             <a href="index.html" class="text-2xl font-bold text-blue-400"><i class="fas fa-shield-alt mr-2"></i>PhishGuard Pro</a>
             <ul class="flex space-x-6">
@@ -36,33 +36,31 @@
             </ul>
         </div>
     </nav>
-
-    <!-- Centered Authentication Form -->
-    <div class="container mx-auto px-4 flex items-center justify-center min-h-screen">
-        <div class="glass p-8 rounded-lg max-w-md w-full">
-            <h2 class="text-3xl font-bold mb-6 text-center text-white">Welcome to PhishGuard Pro</h2>
-            <div class="mb-4 flex justify-center">
-                <button id="signInBtn" class="bg-blue-500 text-white px-4 py-2 rounded-l-lg focus:outline-none">Sign In</button>
-                <button id="signUpBtn" class="bg-gray-300 text-gray-700 px-4 py-2 rounded-r-lg focus:outline-none">Sign Up</button>
+    
+    <div class="min-h-screen flex items-center justify-center">
+        <div class="container mx-auto px-4">
+            <div class="glass p-8 rounded-lg max-w-md mx-auto">
+                <h2 class="text-3xl font-bold mb-6 text-center text-white">Welcome to PhishGuard Pro</h2>
+                <div class="mb-4 flex justify-center">
+                    <button id="signInBtn" class="bg-blue-500 text-white px-4 py-2 rounded-l-lg focus:outline-none">Sign In</button>
+                    <button id="signUpBtn" class="bg-gray-300 text-gray-700 px-4 py-2 rounded-r-lg focus:outline-none">Sign Up</button>
+                </div>
+                <form id="signInForm" class="space-y-4">
+                    <input type="email" placeholder="Email" class="w-full px-4 py-2 rounded-lg focus:outline-none" required>
+                    <input type="password" placeholder="Password" class="w-full px-4 py-2 rounded-lg focus:outline-none" required>
+                    <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 transition duration-300">Sign In</button>
+                </form>
+                <form id="signUpForm" class="space-y-4 hidden">
+                    <input type="text" placeholder="First Name" class="w-full px-4 py-2 rounded-lg focus:outline-none" required>
+                    <input type="text" placeholder="Last Name" class="w-full px-4 py-2 rounded-lg focus:outline-none" required>
+                    <input type="email" placeholder="Email" class="w-full px-4 py-2 rounded-lg focus:outline-none" required>
+                    <input type="password" placeholder="Password" class="w-full px-4 py-2 rounded-lg focus:outline-none" required>
+                    <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 transition duration-300">Sign Up</button>
+                </form>
             </div>
-            <!-- Sign-In Form -->
-            <form id="signInForm" class="space-y-4">
-                <input type="email" placeholder="Email" class="w-full px-4 py-2 rounded-lg focus:outline-none" required>
-                <input type="password" placeholder="Password" class="w-full px-4 py-2 rounded-lg focus:outline-none" required>
-                <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 transition duration-300">Sign In</button>
-            </form>
-            <!-- Sign-Up Form -->
-            <form id="signUpForm" class="space-y-4 hidden">
-                <input type="text" placeholder="First Name" class="w-full px-4 py-2 rounded-lg focus:outline-none" required>
-                <input type="text" placeholder="Last Name" class="w-full px-4 py-2 rounded-lg focus:outline-none" required>
-                <input type="email" placeholder="Email" class="w-full px-4 py-2 rounded-lg focus:outline-none" required>
-                <input type="password" placeholder="Password" class="w-full px-4 py-2 rounded-lg focus:outline-none" required>
-                <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 transition duration-300">Sign Up</button>
-            </form>
         </div>
     </div>
 
-    <!-- JavaScript for Form Toggle -->
     <script>
         const signInBtn = document.getElementById('signInBtn');
         const signUpBtn = document.getElementById('signUpBtn');
