--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
                 </div>
             </div>
         </section>
+        <section id="simulations" class="my-20">
+        <h2 class="text-3xl font-bold mb-8 text-center">Interactive Phishing Simulations</h2>
+        <div class="glass p-8 rounded-lg text-center">
+            <p class="mb-6">Test your phishing detection skills with our realistic and challenging simulations.</p>
+            <a href="simulations.html" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-full transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110">
+                Start Simulations
+            </a>
+        </div>
+    </section>
         <section id="history" class="my-20"></section>
             <h2 class="text-3xl font-bold mb-8 text-center">Historical Data on Phishing Importance</h2>
             <div class="glass p-8 rounded-lg">
