--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#" class="text-2xl font-bold text-blue-400"><i class="fas fa-shield-alt mr-2"></i>PhishGuard Pro</a>
             <ul class="flex space-x-6">
                 <li><a href="#home" class="hover:text-blue-400 transition">Home</a></li>
-                <li><a href="Simulations.html" class="hover:text-blue-400 transition">Simulations</a></li>
+                <li><a href="#simulations" class="hover:text-blue-400 transition">Simulations</a></li>
                 <li><a href="#history" class="hover:text-blue-400 transition">History</a></li>
                 <li><a href="#analytics" class="hover:text-blue-400 transition">Analytics</a></li>
                 <li><a href="#trainings" class="hover:text-blue-400 transition">Trainings</a></li>
