--- a/Simulations.html
+++ b/Simulations.html
@@ -42,7 +42,7 @@
         <section id="gamified-simulations" class="mt-12">
             <h3 class="text-2xl font-bold mb-6 text-center">Gamified Simulations</h3>
             <div class="glass p-6 rounded-lg text-center cursor-pointer hover:shadow-lg transition duration-300"
-                 onclick="window.location.href='operation-firewall.html'">
+                 onclick="window.location.href='Operation_Firewall.html'">
                 <h4 class="text-xl font-semibold mb-2">Operation Firewall</h4>
                 <p>Embark on a gamified journey to defend against cyber threats.</p>
             </div>
