--- a/Simulations.html
+++ b/Simulations.html
@@ -32,7 +32,7 @@
         <div class="glass p-6 rounded-lg text-center cursor-pointer hover:shadow-lg transition duration-300">
             <h3 class="text-xl font-semibold mb-4">Operation Firewall</h3>
             <p>Join a covert cybersecurity agency to protect InnovateTech from cyber threats.</p>
-            <button onclick="redirectToSimulation()" 
+            <button onclick="window.location.href='Operation_Firewall.html'" 
                 class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded mt-4">
                 Start Mission
             </button>
@@ -42,7 +42,7 @@
         <section id="gamified-simulations" class="mt-12">
             <h3 class="text-2xl font-bold mb-6 text-center">Gamified Simulations</h3>
             <div class="glass p-6 rounded-lg text-center cursor-pointer hover:shadow-lg transition duration-300"
-                 onclick="redirectToSimulation()">
+                 onclick="window.location.href='operation-firewall.html'">
                 <h4 class="text-xl font-semibold mb-2">Operation Firewall</h4>
                 <p>Embark on a gamified journey to defend against cyber threats.</p>
             </div>
@@ -52,13 +52,5 @@
     <footer class="bg-gray-900 text-center py-6">
         <p>&copy; 2025 PhishGuard Pro. All rights reserved.</p>
     </footer>
-
-    <!-- JavaScript -->
-    <script>
-        function redirectToSimulation() {
-            // Redirect to Operation_Firewall.html
-            window.location.href = "Operation_Firewall.html";
-        }
-    </script>
 </body>
 </html>
