--- a/Mission1.html
+++ b/Mission1.html
@@ -62,7 +62,7 @@
     <!-- Dropdown Menu -->
     <div id="dropdownMenu" class="dropdown">
         <a href="Operation_Firewall.html">Back to Operation Firewall</a>
-        <a href="main.html">Go to Main Page</a>
+        <a href="index.html">Go to Main Page</a>
     </div>
 
     <div class="container mx-auto px-4">
